--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
  <p>Call me Ishmael.</p>
  <p>content</p>
  <img src="images/breaching_whale.jpg" alt="Description" />
+<a href="about.html">About this project</a>
  </body>
 </html>
