--- a/about.html
+++ b/about.html
@@ -5,10 +5,13 @@
 </head>
 <body>
 <h1>About</h1>
+
 <p>
 This site is a sample project for the <strong>awesome</strong> Git
 tutorial <em>Learn EnoughTM Git to Be Dangerous</em>.
 </p>
 <a href="https://www.learnenough.com/git-tutorial">...</a>
+<img src="images/polar_bear.jpg" alt="Polar bear">
 </body>
+
 </html>
