--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  <h1>hello, world</h1>
  <p>Call me Ishmael.</p>
  <p>content</p>
- <img src="images/breaching_whale.jpg" alt="Description" />
+<img src="images/breaching_whale.jpg" alt="Breaching whale">
 <a href="about.html">About this project</a>
  </body>
 </html>
